--- a/Public/index.html
+++ b/Public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://mealfood.herokuapp.com/public/img/food.jpg">
+    <meta property="og:image" content="https://ibb.co/LvQRH8R">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
