--- a/Public/index.html
+++ b/Public/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="guardiões, gb, boticário">
-    <meta name="description" content="Guardiões GB é um jogo para os colaboradores do grupo boticário. O mesmo aborda conhecimentos sobre segurança no trabalho.">
+    <meta name="keywords" content="culinária e receitas">
+    <meta name="description" content="procure por ingredientes em inglês">
     <meta property="og:image" content="https://uploaddeimagens.com.br/images/003/495/736/full/food.jpg?1634778354">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
